# auth-fastapi

./: Dockerfile  README.md  build-docker.sh  docker-compose.yml  pyproject.toml
auth_fastapi/: auth.py  db.py  main.py
tests/: test_auth_fastapi.py
